crates/anvil-tui/src/surfaces/tutorial/snapshots/anvil_tui__surfaces__tutorial__render__tests__snapshot_path_select.snap
---
source: crates/anvil-tui/src/surfaces/tutorial/render.rs
expression: "crate::test_utils::snapshot::buffer_to_string(&buf)"
---
[[fg:#D95A00,bold]‡[fg:#D95A00,bold]][fg:#D95A00,bold] a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold] [fg:#85858A]>[fg:#85858A] [fg:#85858A]T[fg:#EBEBEB]u[fg:#EBEBEB]t[fg:#EBEBEB]o[fg:#EBEBEB]r[fg:#EBEBEB]i[fg:#EBEBEB]a[fg:#EBEBEB]l[fg:#EBEBEB]                                                            
                                                                                
  ┌[fg:#D95A00] [fg:#D95A00]C[fg:#D95A00]h[fg:#D95A00]o[fg:#D95A00]o[fg:#D95A00]s[fg:#D95A00]e[fg:#D95A00] [fg:#D95A00]a[fg:#D95A00] [fg:#D95A00]L[fg:#D95A00]e[fg:#D95A00]a[fg:#D95A00]r[fg:#D95A00]n[fg:#D95A00]i[fg:#D95A00]n[fg:#D95A00]g[fg:#D95A00] [fg:#D95A00]P[fg:#D95A00]a[fg:#D95A00]t[fg:#D95A00]h[fg:#D95A00] [fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┐[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00] >[fg:#D95A00,bold]>[fg:#D95A00,bold] [fg:#D95A00,bold]a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold]'[fg:#D95A00,bold]s[fg:#D95A00,bold] [fg:#D95A00,bold]p[fg:#D95A00,bold]r[fg:#D95A00,bold]o[fg:#D95A00,bold]t[fg:#D95A00,bold]e[fg:#D95A00,bold]c[fg:#D95A00,bold]t[fg:#D95A00,bold]i[fg:#D95A00,bold]o[fg:#D95A00,bold]n[fg:#D95A00,bold] [fg:#D95A00,bold]l[fg:#D95A00,bold]o[fg:#D95A00,bold]o[fg:#D95A00,bold]p[fg:#D95A00,bold] [fg:#85858A] [fg:#85858A]6[fg:#85858A]0[fg:#85858A]-[fg:#85858A]s[fg:#85858A]e[fg:#85858A]c[fg:#85858A]o[fg:#85858A]n[fg:#85858A]d[fg:#85858A] [fg:#85858A]w[fg:#85858A]a[fg:#85858A]l[fg:#85858A]k[fg:#85858A]:[fg:#85858A] [fg:#85858A]s[fg:#85858A]e[fg:#85858A]e[fg:#85858A] [fg:#85858A]w[fg:#85858A]h[fg:#85858A]a[fg:#85858A]t[fg:#85858A] [fg:#85858A]a[fg:#85858A]n[fg:#85858A]v[fg:#85858A]i[fg:#85858A]l[fg:#85858A] [fg:#85858A]c[fg:#85858A]h[fg:#85858A]e[fg:#85858A]c[fg:#85858A]k[fg:#85858A]s[fg:#85858A],[fg:#85858A] [fg:#85858A]t[fg:#85858A]h[fg:#85858A]e[fg:#85858A]n[fg:#85858A]  │[fg:#D95A00]  
  │[fg:#D95A00] v[fg:#85858A]e[fg:#85858A]r[fg:#85858A]i[fg:#85858A]f[fg:#85858A]y[fg:#85858A] [fg:#85858A]p[fg:#85858A]r[fg:#85858A]o[fg:#85858A]t[fg:#85858A]e[fg:#85858A]c[fg:#85858A]t[fg:#85858A]i[fg:#85858A]o[fg:#85858A]n[fg:#85858A] [fg:#85858A]i[fg:#85858A]n[fg:#85858A] [fg:#85858A]t[fg:#85858A]h[fg:#85858A]i[fg:#85858A]s[fg:#85858A] [fg:#85858A]r[fg:#85858A]e[fg:#85858A]p[fg:#85858A]o[fg:#85858A]                                           │[fg:#D95A00]  
  │[fg:#D95A00]  [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB]D[fg:#EBEBEB]e[fg:#EBEBEB]v[fg:#EBEBEB]e[fg:#EBEBEB]l[fg:#EBEBEB]o[fg:#EBEBEB]p[fg:#EBEBEB]e[fg:#EBEBEB]r[fg:#EBEBEB] [fg:#EBEBEB]a[fg:#EBEBEB]c[fg:#EBEBEB]c[fg:#EBEBEB]e[fg:#EBEBEB]l[fg:#EBEBEB]e[fg:#EBEBEB]r[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB]i[fg:#EBEBEB]o[fg:#EBEBEB]n[fg:#EBEBEB] [fg:#EBEBEB] [fg:#85858A] [fg:#85858A]W[fg:#85858A]i[fg:#85858A]r[fg:#85858A]e[fg:#85858A] [fg:#85858A]y[fg:#85858A]o[fg:#85858A]u[fg:#85858A]r[fg:#85858A] [fg:#85858A]A[fg:#85858A]I[fg:#85858A] [fg:#85858A]c[fg:#85858A]o[fg:#85858A]d[fg:#85858A]i[fg:#85858A]n[fg:#85858A]g[fg:#85858A] [fg:#85858A]a[fg:#85858A]g[fg:#85858A]e[fg:#85858A]n[fg:#85858A]t[fg:#85858A],[fg:#85858A] [fg:#85858A]v[fg:#85858A]a[fg:#85858A]l[fg:#85858A]i[fg:#85858A]d[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A] [fg:#85858A]i[fg:#85858A]t[fg:#85858A]s[fg:#85858A]      │[fg:#D95A00]  
  │[fg:#D95A00] e[fg:#85858A]d[fg:#85858A]i[fg:#85858A]t[fg:#85858A]s[fg:#85858A],[fg:#85858A] [fg:#85858A]a[fg:#85858A]n[fg:#85858A]d[fg:#85858A] [fg:#85858A]f[fg:#85858A]e[fg:#85858A]e[fg:#85858A]d[fg:#85858A] [fg:#85858A]i[fg:#85858A]t[fg:#85858A] [fg:#85858A]g[fg:#85858A]r[fg:#85858A]a[fg:#85858A]p[fg:#85858A]h[fg:#85858A] [fg:#85858A]c[fg:#85858A]o[fg:#85858A]n[fg:#85858A]t[fg:#85858A]e[fg:#85858A]x[fg:#85858A]t[fg:#85858A]                                         │[fg:#D95A00]  
  │[fg:#D95A00]  [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB]P[fg:#EBEBEB]o[fg:#EBEBEB]l[fg:#EBEBEB]i[fg:#EBEBEB]c[fg:#EBEBEB]y[fg:#EBEBEB] [fg:#EBEBEB]c[fg:#EBEBEB]h[fg:#EBEBEB]e[fg:#EBEBEB]c[fg:#EBEBEB]k[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#85858A] [fg:#85858A]D[fg:#85858A]e[fg:#85858A]f[fg:#85858A]i[fg:#85858A]n[fg:#85858A]e[fg:#85858A] [fg:#85858A]c[fg:#85858A]h[fg:#85858A]e[fg:#85858A]c[fg:#85858A]k[fg:#85858A]s[fg:#85858A] [fg:#85858A]t[fg:#85858A]h[fg:#85858A]a[fg:#85858A]t[fg:#85858A] [fg:#85858A]p[fg:#85858A]r[fg:#85858A]o[fg:#85858A]d[fg:#85858A]u[fg:#85858A]c[fg:#85858A]e[fg:#85858A] [fg:#85858A]f[fg:#85858A]i[fg:#85858A]n[fg:#85858A]d[fg:#85858A]i[fg:#85858A]n[fg:#85858A]g[fg:#85858A]s[fg:#85858A] [fg:#85858A]a[fg:#85858A]n[fg:#85858A]d[fg:#85858A]      │[fg:#D95A00]  
  │[fg:#D95A00] i[fg:#85858A]n[fg:#85858A]f[fg:#85858A]l[fg:#85858A]u[fg:#85858A]e[fg:#85858A]n[fg:#85858A]c[fg:#85858A]e[fg:#85858A] [fg:#85858A]t[fg:#85858A]h[fg:#85858A]e[fg:#85858A] [fg:#85858A]g[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A]                                                       │[fg:#D95A00]  
  │[fg:#D95A00]  [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB]B[fg:#EBEBEB]o[fg:#EBEBEB]u[fg:#EBEBEB]n[fg:#EBEBEB]d[fg:#EBEBEB]a[fg:#EBEBEB]r[fg:#EBEBEB]y[fg:#EBEBEB] [fg:#EBEBEB]f[fg:#EBEBEB]i[fg:#EBEBEB]n[fg:#EBEBEB]d[fg:#EBEBEB]i[fg:#EBEBEB]n[fg:#EBEBEB]g[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#85858A] [fg:#85858A]S[fg:#85858A]e[fg:#85858A]e[fg:#85858A] [fg:#85858A]h[fg:#85858A]o[fg:#85858A]w[fg:#85858A] [fg:#85858A]b[fg:#85858A]o[fg:#85858A]u[fg:#85858A]n[fg:#85858A]d[fg:#85858A]a[fg:#85858A]r[fg:#85858A]y[fg:#85858A] [fg:#85858A]c[fg:#85858A]h[fg:#85858A]e[fg:#85858A]c[fg:#85858A]k[fg:#85858A]s[fg:#85858A] [fg:#85858A]t[fg:#85858A]u[fg:#85858A]r[fg:#85858A]n[fg:#85858A] [fg:#85858A]i[fg:#85858A]m[fg:#85858A]p[fg:#85858A]o[fg:#85858A]r[fg:#85858A]t[fg:#85858A]s[fg:#85858A] [fg:#85858A]i[fg:#85858A]n[fg:#85858A]t[fg:#85858A]o[fg:#85858A]    │[fg:#D95A00]  
  │[fg:#D95A00] a[fg:#85858A]c[fg:#85858A]t[fg:#85858A]i[fg:#85858A]o[fg:#85858A]n[fg:#85858A]a[fg:#85858A]b[fg:#85858A]l[fg:#85858A]e[fg:#85858A] [fg:#85858A]f[fg:#85858A]i[fg:#85858A]n[fg:#85858A]d[fg:#85858A]i[fg:#85858A]n[fg:#85858A]g[fg:#85858A]s[fg:#85858A]                                                      │[fg:#D95A00]  
  │[fg:#D95A00]  [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB]C[fg:#EBEBEB]o[fg:#EBEBEB]n[fg:#EBEBEB]f[fg:#EBEBEB]i[fg:#EBEBEB]g[fg:#EBEBEB]u[fg:#EBEBEB]r[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB]i[fg:#EBEBEB]o[fg:#EBEBEB]n[fg:#EBEBEB] [fg:#EBEBEB]d[fg:#EBEBEB]r[fg:#EBEBEB]i[fg:#EBEBEB]f[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#85858A] [fg:#85858A]C[fg:#85858A]a[fg:#85858A]p[fg:#85858A]t[fg:#85858A]u[fg:#85858A]r[fg:#85858A]e[fg:#85858A] [fg:#85858A]s[fg:#85858A]t[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A] [fg:#85858A]c[fg:#85858A]h[fg:#85858A]a[fg:#85858A]n[fg:#85858A]g[fg:#85858A]e[fg:#85858A]s[fg:#85858A] [fg:#85858A]a[fg:#85858A]n[fg:#85858A]d[fg:#85858A] [fg:#85858A]r[fg:#85858A]e[fg:#85858A]v[fg:#85858A]i[fg:#85858A]e[fg:#85858A]w[fg:#85858A] [fg:#85858A]t[fg:#85858A]h[fg:#85858A]e[fg:#85858A]         │[fg:#D95A00]  
  │[fg:#D95A00] f[fg:#85858A]i[fg:#85858A]n[fg:#85858A]d[fg:#85858A]i[fg:#85858A]n[fg:#85858A]g[fg:#85858A]s[fg:#85858A] [fg:#85858A]b[fg:#85858A]e[fg:#85858A]t[fg:#85858A]w[fg:#85858A]e[fg:#85858A]e[fg:#85858A]n[fg:#85858A] [fg:#85858A]s[fg:#85858A]n[fg:#85858A]a[fg:#85858A]p[fg:#85858A]s[fg:#85858A]h[fg:#85858A]o[fg:#85858A]t[fg:#85858A]s[fg:#85858A]                                               │[fg:#D95A00]  
  │[fg:#D95A00]  [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB]C[fg:#EBEBEB]I[fg:#EBEBEB] [fg:#EBEBEB]g[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB]e[fg:#EBEBEB] [fg:#EBEBEB]i[fg:#EBEBEB]n[fg:#EBEBEB]t[fg:#EBEBEB]e[fg:#EBEBEB]g[fg:#EBEBEB]r[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB]i[fg:#EBEBEB]o[fg:#EBEBEB]n[fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB] [fg:#85858A] [fg:#85858A]C[fg:#85858A]a[fg:#85858A]r[fg:#85858A]r[fg:#85858A]y[fg:#85858A] [fg:#85858A]c[fg:#85858A]h[fg:#85858A]e[fg:#85858A]c[fg:#85858A]k[fg:#85858A]s[fg:#85858A],[fg:#85858A] [fg:#85858A]f[fg:#85858A]i[fg:#85858A]n[fg:#85858A]d[fg:#85858A]i[fg:#85858A]n[fg:#85858A]g[fg:#85858A]s[fg:#85858A],[fg:#85858A] [fg:#85858A]a[fg:#85858A]n[fg:#85858A]d[fg:#85858A] [fg:#85858A]g[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A] [fg:#85858A]o[fg:#85858A]u[fg:#85858A]t[fg:#85858A]c[fg:#85858A]o[fg:#85858A]m[fg:#85858A]e[fg:#85858A]s[fg:#85858A]    │[fg:#D95A00]  
  │[fg:#D95A00] i[fg:#85858A]n[fg:#85858A]t[fg:#85858A]o[fg:#85858A] [fg:#85858A]y[fg:#85858A]o[fg:#85858A]u[fg:#85858A]r[fg:#85858A] [fg:#85858A]d[fg:#85858A]e[fg:#85858A]l[fg:#85858A]i[fg:#85858A]v[fg:#85858A]e[fg:#85858A]r[fg:#85858A]y[fg:#85858A] [fg:#85858A]w[fg:#85858A]o[fg:#85858A]r[fg:#85858A]k[fg:#85858A]f[fg:#85858A]l[fg:#85858A]o[fg:#85858A]w[fg:#85858A]                                              │[fg:#D95A00]  
  │[fg:#D95A00]  [fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB]W[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB]c[fg:#EBEBEB]h[fg:#EBEBEB] [fg:#EBEBEB]a[fg:#EBEBEB]n[fg:#EBEBEB]v[fg:#EBEBEB]i[fg:#EBEBEB]l[fg:#EBEBEB] [fg:#EBEBEB]w[fg:#EBEBEB]o[fg:#EBEBEB]r[fg:#EBEBEB]k[fg:#EBEBEB] [fg:#EBEBEB]([fg:#EBEBEB]d[fg:#EBEBEB]e[fg:#EBEBEB]m[fg:#EBEBEB]o[fg:#EBEBEB])[fg:#EBEBEB] [fg:#85858A] [fg:#85858A]A[fg:#85858A] [fg:#85858A]h[fg:#85858A]a[fg:#85858A]n[fg:#85858A]d[fg:#85858A]s[fg:#85858A]-[fg:#85858A]f[fg:#85858A]r[fg:#85858A]e[fg:#85858A]e[fg:#85858A] [fg:#85858A]s[fg:#85858A]a[fg:#85858A]n[fg:#85858A]d[fg:#85858A]b[fg:#85858A]o[fg:#85858A]x[fg:#85858A] [fg:#85858A]d[fg:#85858A]e[fg:#85858A]m[fg:#85858A]o[fg:#85858A]n[fg:#85858A]s[fg:#85858A]t[fg:#85858A]r[fg:#85858A]a[fg:#85858A]t[fg:#85858A]i[fg:#85858A]o[fg:#85858A]n[fg:#85858A] [fg:#85858A]o[fg:#85858A]f[fg:#85858A]        │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  └[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┘[fg:#D95A00]  
j[fg:#85858A]/[fg:#85858A]k[fg:#85858A] [fg:#85858A]n[fg:#85858A]a[fg:#85858A]v[fg:#85858A]i[fg:#85858A]g[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A] [fg:#85858A] [fg:#85858A]e[fg:#85858A]n[fg:#85858A]t[fg:#85858A]e[fg:#85858A]r[fg:#85858A] [fg:#85858A]s[fg:#85858A]e[fg:#85858A]l[fg:#85858A]e[fg:#85858A]c[fg:#85858A]t[fg:#85858A] [fg:#85858A] [fg:#85858A]e[fg:#85858A]s[fg:#85858A]c[fg:#85858A] [fg:#85858A]c[fg:#85858A]l[fg:#85858A]o[fg:#85858A]s[fg:#85858A]e[fg:#85858A] [fg:#85858A]t[fg:#85858A]u[fg:#85858A]t[fg:#85858A]o[fg:#85858A]r[fg:#85858A]i[fg:#85858A]a[fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]q[fg:#85858A] [fg:#85858A]q[fg:#85858A]u[fg:#85858A]i[fg:#85858A]t[fg:#85858A]     [[fg:#85858A]‡[fg:#85858A]][fg:#85858A] [fg:#85858A]a[fg:#85858A] [fg:#85858A]n[fg:#85858A] [fg:#85858A]v[fg:#85858A] [fg:#85858A]i[fg:#85858A] [fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]v[fg:#85858A]X[fg:#85858A].[fg:#85858A]Y[fg:#85858A].[fg:#85858A]Z[fg:#85858A]
